@@ -1624,6 +1624,7 @@ CREATE TABLE templates (
 	id int(11)		NOT NULL auto_increment,
 	type tinyint		NOT NULL,
 	name varchar(50)	NOT NULL,
+	subject varchar(255)	DEFAULT '' NOT NULL,
 	message	text		DEFAULT '' NOT NULL,
 	PRIMARY KEY (id),
 	UNIQUE KEY name (type, name)
@@ -1958,4 +1959,4 @@ INSERT INTO uiconfig (section, var, value, description, disabled) VALUES
 ('userpanel','owner_stats','0','',0),
 ('userpanel','default_categories','1','',0);
 
-INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2014040700');
+INSERT INTO dbinfo (keytype, keyvalue) VALUES ('dbversion', '2014061200');
